# MLOps-Project

./: -y  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config_cpu.yaml  config_gpu.yaml  data.dvc  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_deploytest.txt  requirements_dev.txt  requirements_fastapi_predict.txt
.dvc/: config
.github/workflows/: docker.yml  docker_server.yml  docker_train.yml  tests.yml  trainer_container.yml
MLOps-Project/: __init__.py
MLOps-Project/models/: model.py
MLOps_Project/: __init__.py  hyperparameter_sweep.py  predict_model.py  train_model.py
MLOps_Project/data/: create_bmp_img.py  fashion_mnist_dataset.py  make_dataset.py
MLOps_Project/endpoints/: firestore.py  main.py
MLOps_Project/models/: __init__.py  baseline_model.py  efficientnet.py  mobilenet.py  model.py  model_lookup.py  resnet.py  vgg.py  visiontransformer.py  xcit.py
MLOps_Project/visualizations/: visualize.py  visualize_data.py  visualize_resnet.py
configs/: config.yaml
configs/architecture/: efficientnet.yaml  mobilenet.yaml  resnet.yaml  vgg.yaml  visiontransformer.yaml  xcitnano.yaml
configs/sweep/: sweep_config.yaml
dockerfiles/: entrypoint_train.sh  fastapi_predict.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.py
tests/: __init__.py  test_data.py  test_model.py  test_predict.py  test_train.py  test_visualize.py
wandb/: latest-run
wandb/run-20240108_154947-643iovre/: run-643iovre.wandb
(+14 files in other folders)
