[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps_Project"
version = "0.0.3"
description = "Exam project for the MLOps course at DTU"
authors = [
  { name = "Group 23", email = "your@email.com" },
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["MLOps_Project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
